On Mac, build as mac-arm64 on Apple Silicon devices
Signed-off-by: Jean Berniolles <2398126+thebrave@users.noreply.github.com>

--- a/engine/src/flutter/shell/platform/darwin/ios/BUILD.gn
+++ b/engine/src/flutter/shell/platform/darwin/ios/BUILD.gn
@@ -323,8 +323,13 @@ copy("copy_dylib") {
 copy("copy_asan_runtime_dylib") {
   visibility = [ ":*" ]
 
-  _libclang_base_path =
+  if (host_cpu == "arm64") {
+    _libclang_base_path =
+      "$buildtools_path/mac-arm64/clang/lib/clang/13.0.0/lib/darwin/"
+  } else {
+    _libclang_base_path =
       "$buildtools_path/mac-x64/clang/lib/clang/13.0.0/lib/darwin/"
+  }
 
   if (defined(use_ios_simulator) && use_ios_simulator) {
     _dylib_name = "libclang_rt.asan_iossim_dynamic.dylib"
